// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`variant and prop both present object value using different keys: object merged 1`] = `
.c0 {
  box-sizing: border-box;
  border: none;
  cursor: pointer;
  padding: 15px 20px;
}

.c2 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  text-align: left;
  color: red;
  font-size: 14px;
  white-space: nowrap;
}

.c1 {
  cursor: pointer;
}

<button
  class="c0 c1"
  cursor="pointer"
>
  <span
    class="c2"
    color="red"
  >
    content
  </span>
</button>
`;

exports[`variant and prop both present object value using same keys: props take priority 1`] = `
.c0 {
  box-sizing: border-box;
  border: none;
  cursor: pointer;
  padding: 15px 20px;
}

.c2 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  color: red;
  font-size: 5px;
  white-space: nowrap;
}

.c1 {
  cursor: pointer;
}

<button
  class="c0 c1"
  cursor="pointer"
>
  <span
    class="c2"
    color="red"
  >
    content
  </span>
</button>
`;

exports[`variant and prop both present string value using same keys: props take priority 1`] = `
.c0 {
  box-sizing: border-box;
  border: none;
  cursor: pointer;
  padding: 5px 5px;
}

.c2 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  color: red;
  font-size: 14px;
  white-space: nowrap;
}

.c1 {
  cursor: pointer;
}

<button
  class="c0 c1"
  cursor="pointer"
>
  <span
    class="c2"
    color="red"
  >
    content
  </span>
</button>
`;
